--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "compression": "^1.7.4",
     "config": "^3.3.6",
     "cors": "^2.8.5",
+    "expo-server-sdk": "^3.6.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "helmet": "^4.6.0",
