--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node app.js"
+  },
+  "engines": {
+    "node": "12.19.0"
   },
   "author": "faizan khalqiue\u001b[D\u001b[D\u001b[D\u001b[D\u001b[C\u001b[C\u001b[\u001b[\u001b[C\u001b[C\u001b[C\u001bique",
   "license": "ISC",
@@ -24,6 +27,7 @@
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.0.0",
     "multer": "^1.4.3",
+    "sharp": "^0.29.1",
     "socket.io": "^4.2.0"
   }
 }
